--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,8 @@
         android:layout_marginStart="37dp"
         android:layout_marginTop="84dp"
         android:layout_marginEnd="37dp"
-        android:text="Citas Medicas"
+        android:text="MediCita"
+        android:textColor="#45D7E9"
         android:textSize="50dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -29,9 +30,10 @@
         android:layout_marginStart="50dp"
         android:layout_marginTop="52dp"
         android:layout_marginEnd="50dp"
-        android:text="REGISTRO"
-        android:textColor="@color/white"
         android:backgroundTint="#45D7E9"
+        android:text="REGISTRATE AQUÍ"
+        android:background="@drawable/caja"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -42,11 +44,12 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="50dp"
         android:backgroundTint="#45D7E9"
         android:text="INICIO"
         android:textColor="@color/white"
+        android:background="@drawable/caja"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,7 +62,7 @@
         android:layout_marginStart="52dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="218dp"
-        android:text="Dont have an account?"
+        android:text="No tienes una cuenta?"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.666"
@@ -83,7 +86,7 @@
         android:layout_marginStart="100dp"
         android:layout_marginTop="56dp"
         android:layout_marginEnd="100dp"
-        android:text="or Sign in With"
+        android:text="o inicia sesión con:"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.508"
