--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -31,6 +31,7 @@
         android:layout_marginEnd="50dp"
         android:backgroundTint="#45D7E9"
         android:text="REGISTRARSE"
+        android:background="@drawable/caja"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -129,6 +130,7 @@
         android:layout_marginStart="50dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="50dp"
+        android:background="@drawable/caja"
         android:backgroundTint="#45D7E9"
         android:text="REGRESAR A INICIO"
         android:textColor="@color/white"
