--- a/app/src/main/res/drawable/boton.xml
+++ b/app/src/main/res/drawable/boton.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <stroke android:color="#8AC8081F"
+    <stroke android:color="#45D6E8"
         android:width="3dp">
     </stroke>
     <solid android:color="@color/white"></solid>
