--- a/app/src/main/res/layout/activity_principal.xml
+++ b/app/src/main/res/layout/activity_principal.xml
@@ -1,104 +1,123 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PrincipalActivity">
+    tools:context=".PrincipalActivity"
+    android:orientation="vertical">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:orientation="vertical">
+
+        <ImageView
+            android:layout_width="230dp"
+            android:layout_height="230dp"
+            android:src="@drawable/clinica_l"
+            android:layout_gravity="center">
+
+        </ImageView>
+
+        <TextView
+            android:id="@+id/txtUsuario"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="20dp"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:gravity="center"
+            android:text="TextView" />
 
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="140dp"
-        android:text="Bienvenido"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/txtUsuario"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="140dp"
-        android:layout_marginEnd="116dp"
-        android:text="TextView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_marginTop="40dp">
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="112dp"
-        android:layout_height="106dp"
-        android:layout_marginStart="216dp"
-        android:layout_marginTop="116dp"
-        android:background="@drawable/boton"
-        android:drawableTop="@android:drawable/ic_menu_my_calendar"
-        android:paddingTop="10dp"
-        android:text="Agendar Cita"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtUsuario"></Button>
+        <Button
+            android:id="@+id/btnCitas"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginHorizontal="30dp"
+            android:background="@drawable/boton"
+            android:drawableTop="@drawable/icono01"
+            android:paddingTop="10dp"
+            android:text="Mis Citas"
+            android:textSize="15sp"
+            android:textStyle="bold" />
 
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="112dp"
-        android:layout_height="106dp"
-        android:layout_marginStart="56dp"
-        android:layout_marginTop="64dp"
-        android:background="@drawable/boton"
-        android:drawableTop="@android:drawable/ic_dialog_email"
-        android:paddingTop="10dp"
-        android:text="Otros"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button"></Button>
+        <Button
+            android:id="@+id/btnAgendarCita"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginHorizontal="30dp"
+            android:background="@drawable/boton"
+            android:drawableTop="@drawable/icono2"
+            android:paddingTop="10dp"
+            android:text="Agendar Cita"
+            android:textSize="15sp"
+            android:textStyle="bold" />
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="112dp"
-        android:layout_height="106dp"
-        android:layout_marginStart="56dp"
-        android:layout_marginTop="116dp"
-        android:background="@drawable/boton"
-        android:drawableTop="@android:drawable/checkbox_on_background"
-        android:paddingTop="20dp"
-        android:text="Mis Citas"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5"></Button>
+    </LinearLayout>
 
-    <Button
-        android:layout_width="112dp"
-        android:layout_height="106dp"
-        android:layout_marginStart="224dp"
-        android:layout_marginTop="64dp"
-        android:background="@drawable/boton"
-        android:drawableTop="@android:drawable/ic_menu_close_clear_cancel"
-        android:paddingTop="10dp"
-        android:text="Cancelar Cita"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2"></Button>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_marginTop="40dp">
 
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="152dp"
-        android:layout_height="43dp"
-        android:layout_marginStart="128dp"
-        android:layout_marginTop="36dp"
-        android:text="APP CITAS"
-        android:textSize="30dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <Button
+            android:id="@+id/btnInfo"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginHorizontal="30dp"
+            android:background="@drawable/boton"
+            android:drawableTop="@drawable/icono3"
+            android:paddingTop="10dp"
+            android:text="Info   Clinica"
+            android:textSize="15sp"
+            android:textStyle="bold" />
 
-    <Button
-        android:id="@+id/btnCerrarSesion"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="144dp"
-        android:text="Cerrar Sesion"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button4"
-        app:layout_constraintVertical_bias="0.45" />
+        <Button
+            android:id="@+id/btnCancelarCita"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginHorizontal="30dp"
+            android:background="@drawable/boton"
+            android:drawableTop="@drawable/icono4"
+            android:paddingTop="10dp"
+            android:text="Cancelar Cita"
+            android:textSize="15sp"
+            android:textStyle="bold" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/btnCerrarSesion"
+            android:layout_width="150dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:layout_margin="40dp"
+            android:backgroundTint="#45D7E9"
+            android:background="@drawable/caja"
+            android:textColor="@color/white"
+            android:text="Cerrar Sesion" />
+
+    </LinearLayout>
+
+</LinearLayout>
